--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,9 @@ fabric.properties
 # End of https://www.gitignore.io/api/intellij
 
 **/*.jar
+
+# vscode settings
+.vscode
+.project
+.settings
+.classpath
